# DataShip

./: .gitignore  LICENSE  README.md  dataship.db  demo_data.csv  main.py  multipage_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_sqlite3.py  tox.ini
.github/workflows/: deploy.yml  tests.yml
demo_data/: data_coordinates.json
functionality_tests/: streamlit_auth_example.py  streamlit_option_menu_example.py  test.db
functionality_tests/multiapp2/: app.py  multiapp.py
functionality_tests/multiapp2/apps/: data.py  home.py  model.py
prototype/: crear_db.py  dataship.db  db_management.py  db_tables.txt  main.py
src/: main.py
src/DataShip/: main.py
src/DataShip/data_analysis_modules/: data_analysis_modules.py  user_files_reader_writer.py
src/DataShip/db_management/: db_manager.py  db_models.py
src/DataShip/db_management/scripts/: create_dataship_db.sql  populate_dataship_db.sql
src/DataShip/views/: feed_post_admin.py  feedback_form.py  home.py  login.py  modules_store.py  my_files.py  settings.py  signup.py
tests/: db_manager_test.py  db_models_test.py
user_files/: 6.csv
