[metadata]
name = DataShip
description = an easy to use data analysis tool
author = Agustin Zavala
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    DataShip
install_requires =
    requests>=2
    numpy>=1.22
    pandas>=1.3
    scikit_learn>=1
    streamlit>=1.4
    streamlit_option_menu>=0.3
    streamlit-aggrid>=0.2.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
DataShip = py.typed

[flake8]
max-line-length = 160